<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2a2a2a"
    tools:context=".Modalidades">

    <LinearLayout
        android:layout_width="153dp"
        android:layout_height="245dp"
        android:layout_marginStart="129dp"
        android:layout_marginTop="243dp"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="243dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="futsal"
            android:text="@string/futsal" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="handbol"
            android:text="@string/handebol" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="basquetebol"
            android:text="@string/basquetebol" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="queimada"
            android:text="@string/queimada" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="voileibol"
            android:text="@string/voileibol" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>