<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2a2a2a"
    tools:context=".EquipeFormatadores">

    <ImageView
        android:id="@+id/imgEscudo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="29dp"
        app:layout_constraintBottom_toTopOf="@+id/nomeEquipe"
        app:layout_constraintEnd_toStartOf="@+id/imgCamisa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/camisa_formatadores" />

    <ImageView
        android:id="@+id/imgCamisa"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="136dp"
        android:layout_marginEnd="65dp"
        app:layout_constraintBottom_toBottomOf="@+id/imgEscudo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgEscudo"
        app:layout_constraintTop_toTopOf="@+id/imgEscudo"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/logo_formatadores" />

    <TextView
        android:id="@+id/descEquipe"
        android:layout_width="178dp"
        android:layout_height="218dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="259dp"
        android:layout_marginBottom="381dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/descricaoformatadores"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomeEquipe" />

    <TextView
        android:id="@+id/nomeEquipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="9dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/formatadores"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/descEquipe"
        app:layout_constraintEnd_toEndOf="@+id/imgEscudo"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="@+id/imgEscudo"
        app:layout_constraintTop_toBottomOf="@+id/imgEscudo" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="32dp"
        android:onClick="gotoInsta"
        android:text="@string/instagram"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:onClick="modalidades"
        android:text="@string/modalidades"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

</androidx.constraintlayout.widget.ConstraintLayout>